# melting-lang

./: .gitignore  .gitmodules  CMakeLists.txt  EXAMPLES_SUBMODULE.md  GITHUB_SSH_KEY.txt  Makefile  Makefile.win  README.md  SYNTAX_HIGHLIGHTER_SUBMODULE.md  a.out  config.h  config.h.in  config_win.h  example.melt  melt
.github/workflows/: build-and-test.yml  build-cmake.yml  release.yml
debian/: changelog  control  rules
docs/: 01_GETTING_STARTED.md  02_LANGUAGE_REFERENCE.md  03_BUILTINS.md  04_HTTP_AND_MVC.md  05_EXAMPLES.md  06_DEVELOPMENT_ADDING_SYNTAX.md  README.md  dev.html  index.html  tutorial_implement_syntax.html  tutorial_implement_syntax.md
docs/html/: index.html
extensions/: CMakeLists.txt
extensions/datetime/: README.md  datetime.cpp
extensions/example/: example.cpp  index.html
extensions/example/docs/: developer.html
extensions/ffmpeg/: README.md  ffmpeg.cpp
extensions/headless_browser/: README.md  headless_browser.cpp
extensions/image_optimize/: README.md  image_optimize.cpp
extensions/os/: README.md  os.cpp
extensions/ssh/: README.md  ssh.cpp
extensions/zip/: README.md  zip.cpp
scripts/: add-examples-submodule.sh  add-syntax-highlighter-submodule.sh
src/: README.md  ast.hpp  http_server.cpp  http_server.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  mysql_builtin.cpp  mysql_builtin.hpp  parser.cpp  parser.hpp
src/core/: ast.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  module_loader.cpp  module_loader.hpp  parser.cpp  parser.hpp
src/gui/: gui_window.cpp  gui_window.hpp
src/http/: http_server.cpp
src/mysql/: mysql_builtin.cpp  mysql_builtin.hpp
src/qr/: qr_builtin.cpp  qr_builtin.hpp
src/sqlite/: sqlite_builtin.cpp  sqlite_builtin.hpp
syntax_highlighter_extension/: README.md
syntax_highlighter_extension/vs_code_extension/: README.md  language-configuration.json  package.json
syntax_highlighter_extension/vs_code_extension/syntaxes/: melt.tmLanguage.json
